--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" , content="width=device-width, initial-scale=1.0"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Flappy $PEPE</title>
+    <title>Flappy $BALLERS</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,7 +22,7 @@
     <!-- Modal HTML -->
     <div id="myModal" class="login">
         <div class="login-content">
-            <p class="flappyBird">FLAPPY PEPE</p>
+            <p class="flappyBird">FLAPPY BALLERS</p>
             <div style="width: 90%; margin: 0 auto;">
                 <span style="color: #ff4655;">gm & ribbit!</span>
                 <br>
