obfuscate without removing original

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="Valorant.ttf" rel="stylesheet">
 
     <link rel="stylesheet" href="flappybird.css">
-    <script src="flappy.js"></script>
+    <script src="game.js"></script>
 </head>
 
 <body>
